<resources>
    <string name="app_name">Gps</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>
    <string name="home">Главная</string>
    <string name="settings">Настройки</string>
    <string name="location">Местоположение</string>
    <string name="tracks">Маршрут</string>
    <string name="update_time">Время обновления</string>
    <string name="update_time_summary">Время обновление маршрута</string>
    <string name="color_track">Цвет линии маршрута.</string>
    <string name="color_summary">Выбрать цвет линии маршрута.</string>
    <string name="dialog_title">Включить GPS</string>
    <string name="dialog_message">Вы хотите вкючить GPS?</string>


    <string name="zoom_out">-</string>
    <string name="zoom_in">+</string>
    <string name="time_text">Время:</string>
    <string name="speed_text">Скорость:</string>
    <string name="play">play</string>
    <string name="center">center</string>
    <string name="aSpeed_text">Средняя скорость:</string>
    <string name="distance_text">Расстояние:</string>
    <string name="save_track">Сохранить этот маршрут?</string>
    <string name="save">сохранить</string>
</resources>